--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
+*.log
+.idea
+.vscode
+.idea/**/*
+.vscode/**/*
+.nyc_output
+mochawesome-report
+.DS_Store
+npm-debug.log.*
+node_modules
+node_modules/**/*
+.eslintcache
+cert
+logs/*
+.history
 .env
-/node_modules
