--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
+    "glob": "^8.0.3",
     "http-proxy-middleware": "^2.0.3",
     "mongodb": "^4.4.1",
     "npm-run-all": "^4.1.5",
